So much inline SQL... can't wait to not use PHP!!! :(

--- a/assign6/MEEQSContent.html
+++ b/assign6/MEEQSContent.html
@@ -31,7 +31,7 @@
 					</div>
 					<div id="singleRestaurantLocation" data-bind="visible: restaurantLocations().length == 1, text: selectedRestaurant"></div>
 				</div>
-				<div data-bind="foreach: categories">
+				<div data-bind="foreach: rating">
 					<div class="two fields">
 						<div class="two wide field" style="min-width: 88px;">
 							<span data-bind="text: categoryName"></span>
