--- a/assign6/MEEQSContent.html
+++ b/assign6/MEEQSContent.html
@@ -12,8 +12,8 @@
 
 			<div class="ui bottom attached active tab segment" data-tab="Rate">
 				<div class="six wide field">
-					<div id="restaurants" style="min-width: 220px; min-height: 35px;" class="ui fluid search selection dropdown">
-						<input type="hidden" data-bind="value: selectedRestaurant" />
+					<div id="restaurants" style="min-width: 220px;" class="ui fluid search selection dropdown">
+						<input type="hidden" name="selectedRestaurant" data-bind="value: selectedRestaurant" />
 						<div class="default text">Select a Restaurant</div>
 						<i class="dropdown icon"></i>
 						<div class="menu" data-bind="foreach: restaurantNames">
@@ -21,7 +21,7 @@
 						</div>
 					</div>
 
-					<div id="restaurantLocations" style="min-width: 220px; min-height: 35px;" class="ui fluid search selection dropdown" data-bind="visible: restaurantLocations().length > 1">
+					<div id="restaurantLocations" style="min-width: 220px;" class="ui fluid search selection dropdown" data-bind="visible: restaurantLocations().length > 1">
 						<input type="hidden" data-bind="value: selectedRestaurantLocation" />
 						<div class="default text">Pick Location</div>
 						<i class="dropdown icon"></i>
@@ -73,13 +73,69 @@
 			</div>
 
 			<div class="ui bottom attached tab segment" data-tab="Add">
+				<div class="ui stackable two column grid" data-bind="with: addRestaurantData">
+					<div class="column">
+						<div class="ui input">
+							<input placeholder="Restaurant Name" type="text" data-bind="restaurantName" />
+						</div>
+
+						<div id="restaurantEthnicities" style="min-width: 220px;" class="ui fluid search selection dropdown">
+							<input type="hidden" data-bind="value: restaurantEthnicity" />
+							<div class="default text">Restaurant Ethnicity</div>
+							<i class="dropdown icon"></i>
+							<div class="menu" data-bind="foreach: $root.restaurantEthnicites">
+								<div class="item" data-bind="attr: {'data-value': $data}, text: $data"></div>
+							</div>
+						</div>
+
+						<div id="restaurantTypes" style="min-width: 220px;" class="ui fluid search selection dropdown">
+							<input type="hidden" data-bind="value: restaurantType" />
+							<div class="default text">Restaurant Type</div>
+							<i class="dropdown icon"></i>
+							<div class="menu" data-bind="foreach: $root.restaurantTypes">
+								<div class="item" data-bind="attr: {'data-value': $data}, text: $data"></div>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="column">
+						<div class="ui input">
+							<input placeholder="City" type="text" data-bind="restaurantCity" />
+						</div>
+
+						<div id="states" style="min-width: 220px;" class="ui fluid search selection dropdown">
+							<input type="hidden" data-bind="value: restaurantState" />
+							<div class="default text">State</div>
+							<i class="dropdown icon"></i>
+							<div class="menu" data-bind="foreach: MEEQSHelpers.states">
+								<div class="item" data-bind="attr: {'data-value': name}, text: name"></div>
+							</div>
+						</div>
+
+						<div class="ui input">
+							<input placeholder="Zip" type="text" data-bind="restaurantZip" />
+						</div>
+
+						<div class="ui input">
+							<input placeholder="Street Address" type="text" data-bind="restaurantStreetAddress" />
+						</div>
+					</div>
+
+					<div class="column">
+						<div class="ui inverted green button" data-bind="click: function() { $root.addRestaurant($data, $root) };">Add Restaurant</div>
+						<div class="ui inverted red button" data-bind="click: function() {$root.cancelAddRestaurant($data, $root) }">Cancel</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="ui bottom attached tab segment" data-tab="Administration">
+
 			</div>
 		</div>
 	</div>
 </div>
 
+<script type="text/javascript" src="assign6/MEEQSHelpers.js"></script>
 <script type="text/javascript" src="assign6/MEEQSViewModel.js"></script>
 <script type="text/javascript" src="assign6/MEEQSViewController.js"></script>
