It works, it's finally done... Ember next project totes...

--- a/assign6/MEEQSContent.html
+++ b/assign6/MEEQSContent.html
@@ -1,4 +1,8 @@
-<div class="ui stackable grid" style="margin-top: 1%;">
+<h3 data-bind="visible: !home_view_model.loggedIn()">
+	You must be logged in to use the restaurant rating system!
+</h3>
+
+<div class="ui stackable grid" style="margin-top: 1%;" data-bind="visible: home_view_model.loggedIn()">
 	<div class="one wide column"></div>
 	<div class="seven wide column">
 		<div class="ui small form">
@@ -7,6 +11,7 @@
 				<a class="active item" data-tab="Rate">Rate</a>
 				<a class="item" data-tab="List">List</a>
 				<a class="item" data-tab="Add">Add</a>
+				<a class="item" data-tab="ERD">ERD</a>
 				<a class="item" data-tab="Administration" data-bind="visible: home_view_model.isAdministrator()">Administration</a>
 			</div>
 
@@ -70,20 +75,42 @@
 			</div>
 
 			<div class="ui bottom attached tab segment" data-tab="List">
+				<table class="ui green striped celled table">
+					<thead>
+						<tr>
+							<th>Restaurant Name</th>
+							<th>Menu Rating</th>
+							<th>Enviroment Rating</th>
+							<th>Cost Rating</th>
+							<th>Quality Rating</th>
+							<th>Service Rating</td>
+						</tr>
+					</thead>
+					<tbody data-bind="foreach: averageRestaurantRatings">
+						<tr>
+							<td data-bind="text: restaurantName"></td>
+							<td data-bind="text: menuRating"></td>
+							<td data-bind="text: environmentRating"></td>
+							<td data-bind="text: costRating"></td>
+							<td data-bind="text: qualityRating"></td>
+							<td data-bind="text: serviceRating"></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 
 			<div class="ui bottom attached tab segment" data-tab="Add">
 				<div class="ui stackable two column grid" data-bind="with: addRestaurantData">
 					<div class="column">
 						<div class="ui input">
-							<input placeholder="Restaurant Name" type="text" data-bind="restaurantName" />
+							<input placeholder="Restaurant Name" type="text" data-bind="textInput: restaurantName" />
 						</div>
 
 						<div id="restaurantEthnicities" style="min-width: 220px;" class="ui fluid search selection dropdown">
 							<input type="hidden" data-bind="value: restaurantEthnicity" />
 							<div class="default text">Restaurant Ethnicity</div>
 							<i class="dropdown icon"></i>
-							<div class="menu" data-bind="foreach: $root.restaurantEthnicites">
+							<div class="menu" data-bind="foreach: Object.keys($root.restaurantEthnicites())">
 								<div class="item" data-bind="attr: {'data-value': $data}, text: $data"></div>
 							</div>
 						</div>
@@ -92,7 +119,7 @@
 							<input type="hidden" data-bind="value: restaurantType" />
 							<div class="default text">Restaurant Type</div>
 							<i class="dropdown icon"></i>
-							<div class="menu" data-bind="foreach: $root.restaurantTypes">
+							<div class="menu" data-bind="foreach: Object.keys($root.restaurantTypes())">
 								<div class="item" data-bind="attr: {'data-value': $data}, text: $data"></div>
 							</div>
 						</div>
@@ -101,7 +128,7 @@
 
 					<div class="column">
 						<div class="ui input">
-							<input placeholder="City" type="text" data-bind="restaurantCity" />
+							<input placeholder="City" type="text" data-bind="textInput: restaurantCity" />
 						</div>
 
 						<div id="states" style="min-width: 220px;" class="ui fluid search selection dropdown">
@@ -114,11 +141,11 @@
 						</div>
 
 						<div class="ui input">
-							<input placeholder="Zip" type="text" data-bind="restaurantZip" />
+							<input placeholder="Zip" type="text" data-bind="textInput: restaurantZip" />
 						</div>
 
 						<div class="ui input">
-							<input placeholder="Street Address" type="text" data-bind="restaurantStreetAddress" />
+							<input placeholder="Street Address" type="text" data-bind="textInput: restaurantStreetAddress" />
 						</div>
 					</div>
 
@@ -130,7 +157,20 @@
 			</div>
 
 			<div class="ui bottom attached tab segment" data-tab="Administration">
+				<div class="ui internally celled three column grid" data-bind="foreach: restaurantAdminList">
+					<div class="row">
+						<div class="column" data-bind="text: restaurantName"></div>
+						<div class="column" data-bind="text: restaurantStreetAddress"></div>
+						<div class="column">
+							<i class="green link remove icon" data-bind="click: function() { $root.deleteRestaurantLocation($data, $parent) }"></i>
+							<i class="green link plus icon" data-bind="visible: !isApproved, click: function() { $root.approveRestaurant($data, $parent) }"></i>
+						</div>
+					</div>
+				</div>
+			</div>
 
+			<div class="ui bottom attached tab segment" data-tab="ERD">
+				<img src="assign6/assign6ERD.jpg" />
 			</div>
 		</div>
 	</div>
